--- a/.github/workflows/build-pixelexperience.yml
+++ b/.github/workflows/build-pixelexperience.yml
@@ -9,6 +9,14 @@ on:
         required: true
         default: "thirteen"
         type: string
+      custom_env:
+        description: "key=value;key=value"
+        type: string
+        required: false
+        default: ""
+
+env:
+  custom_env: ${{ inputs.custom_env || '' }}
 
 jobs:
   build:
@@ -36,6 +44,15 @@ jobs:
           done
 
           echo "status=success" >> ${GITHUB_OUTPUT}
+      
+      - name: Load Custom Environment Variables
+        id: env-custom
+        if: ${{ env.custom_env != '' }}
+        env:
+          flag_split: ";"
+        working-directory: /
+        run: |
+          echo "${{ env.custom_env }}" | tr '${{ env.flag_split }}' '\n' | tee -a $GITHUB_ENV
 
       - name: Clear environment
         id: clearinit
