--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -141,42 +141,138 @@ jobs:
           echo -e "Current working directory: $(pwd)"
 
           packages_install=(
-            "bc" 
-            "bison" 
-            "build-essential" 
-            "ccache" 
-            "curl" 
+            "ack"
+            "antlr3"
+            "asciidoc"
+            "autoconf"
+            "automake"
+            "autopoint"
+            "bc"
+            "binutils"
+            "bison"
+            "build-essential"
+            "bzip2"
+            "ca-certificates"
+            "clang"
+            "clangd"
+            "cmake"
+            "cpio"
+            "curl"
+            "device-tree-compiler"
+            "ecj"
+            "fastjar"
             "flex"
-            "g++-multilib" 
-            "gcc-multilib" 
-            "git" 
-            "git-lfs" 
+            "gawk"
+            "g++"
+            "gcc"
+            "gcc-aarch64-linux-gnu"
+            "git"
+            "git-lfs"
             "gnupg"
-            "gperf" 
-            "imagemagick" 
-            "lib32readline-dev" 
-            "lib32z1-dev"
-            "libelf-dev" 
-            "lz4" 
-            "libsdl1.2-dev" 
+            "gperf"
+            "haveged"
+            "help2man"
+            "intltool"
+            "jq"
+            "libelf-dev"
+            "libglib2.0-dev"
+            "libgmp3-dev"
+            "libltdl-dev"
+            "libmpc-dev"
+            "libmpfr-dev"
+            "libncurses5-dev"
+            "libreadline-dev"
             "libssl-dev"
-            "libxml2" 
-            "libxml2-utils" 
-            "lzop" 
-            "pngcrush" 
+            "libtool"
+            "libxml2"
+            "libxml2-utils"
+            "lld"
+            "lldb"
+            "lz4"
+            "lzop"
+            "make"
+            "mkisofs"
+            "ninja-build"
+            "p7zip-full"
+            "patch"
+            "pkgconf"
+            "python3"
+            "python3-pip"
+            "re2c"
             "rsync"
-            "schedtool" 
-            "squashfs-tools" 
-            "xsltproc" 
-            "zip" 
+            "schedtool"
+            "scons"
+            "squashfs-tools"
+            "subversion"
+            "swig"
+            "uglifyjs"
+            "unzip"
+            "vim"
+            "wget"
+            "xsltproc"
+            "zip"
+            "zlib1g-dev"
+          )
+          # Commented out packages (sorted):
+          # "ccache"
+          # "lib32gcc-s1"
+          # "libc6-dev-i386"
+          # "libdb++-dev"
+          # "gcc-multilib"
+          # "g++-multilib"
+          # "libncursesw5"
+          # "libncursesw5-dev"
+          # "lrzsz"
+          # "msmtp"
+          # "nano"
+          # "p7zip"
+          # "python3-docutils"
+          # "python3-ply"
+          # "qemu-utils"
+          # "texinfo"
+          # "xmlto"
+          # "xxd"
+          packages_slim=(
+            "bc"
+            "bison"
+            "build-essential"
+            "ca-certificates"
+            "curl"
+            "flex"
+            "g++"
+            "gcc"
+            "gcc-aarch64-linux-gnu"
+            "git"
+            "git-lfs"
+            "gnupg"
+            "gperf"
+            "libelf-dev"
+            "lz4"
+            "libssl-dev"
+            "libxml2"
+            "libxml2-utils"
+            "lzop"
+            "make"
+            "python3"
+            "rsync"
+            "schedtool"
+            "squashfs-tools"
+            "vim"
+            "xsltproc"
+            "zip"
             "zlib1g-dev"
           )
           packages_extra=(
-            "python3"
+            "imagemagick"
+            "lib32readline-dev"
+            "lib32z1-dev"
+            "libsdl1.2-dev"
+            "pngcrush"
           )
-          sudo -E apt-get -qq -y update
-          sudo -E apt-get -qq -y install "${packages_install[@]}"
-          sudo -E apt-get -y install "${packages_extra[@]}"
+          sudo -E apt-get -y -qq update
+          sudo -E apt-get -y -qq install "${packages_install[@]}"
+          # sudo -E apt-get -y -qq install "${packages_slim[@]}"
+          # sudo -E apt-get -y install "${packages_extra[@]}"
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
