--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -257,7 +257,6 @@ jobs:
             "rsync"
             "schedtool"
             "squashfs-tools"
-            "vim"
             "xsltproc"
             "zip"
             "zlib1g-dev"
@@ -268,10 +267,11 @@ jobs:
             "lib32z1-dev"
             "libsdl1.2-dev"
             "pngcrush"
+            "vim"
           )
           sudo -E apt-get -y -qq update
-          sudo -E apt-get -y -qq install "${packages_install[@]}"
-          # sudo -E apt-get -y -qq install "${packages_slim[@]}"
+          # sudo -E apt-get -y -qq install "${packages_install[@]}"
+          sudo -E apt-get -y -qq install "${packages_slim[@]}"
           # sudo -E apt-get -y install "${packages_extra[@]}"
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
