--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -159,6 +159,7 @@ jobs:
             "cpio"
             "curl"
             "device-tree-compiler"
+            "dwarves"
             "ecj"
             "fastjar"
             "flex"
