--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -385,6 +385,7 @@ jobs:
             --no-clone-bundle \
             --no-tags \
             --verbose \
+            --optimized-fetch \
             -j$(nproc --all)
           # --force-sync \
           # --depth=1 \
