--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -418,16 +418,16 @@ jobs:
           # ls -lh ./device/xiaomi/
           # ls -lh ./device/xiaomi/sm6125-common/
 
-          echo "===== ./device/xiaomi/sm6125-common/setup-makefiles.sh ====="
-          cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
+          # echo "===== ./device/xiaomi/sm6125-common/setup-makefiles.sh ====="
+          # cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
           export DEVICE_COMMON=sm6125-common
           export DEVICE=ginkgo
           export VENDOR=xiaomi
           source ./device/xiaomi/sm6125-common/setup-makefiles.sh
-          echo "===== ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk ====="
-          cat ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk
-          echo "===== ./vendor/xiaomi/sm6125-common/Android.mk ====="
-          cat ./vendor/xiaomi/sm6125-common/Android.mk
+          # echo "===== ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk ====="
+          # cat ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk
+          # echo "===== ./vendor/xiaomi/sm6125-common/Android.mk ====="
+          # cat ./vendor/xiaomi/sm6125-common/Android.mk
           set -e
 
           breakfast ${{ env.android-version }}
