--- a/.github/workflows/build-artifacts_dev.yml
+++ b/.github/workflows/build-artifacts_dev.yml
@@ -473,8 +473,8 @@ jobs:
 
           echo "status=success" | tee -a ${GITHUB_OUTPUT}
 
-      - name: (Output) Upload to Release
-        id: output-release
+      - name: (Upload) to Release
+        id: upload-release
         # if: steps.output.outputs.status == 'success' && !cancelled()
         if: ${{ 'true' == 'false' }} # disable
         uses: ncipollo/release-action@main
@@ -491,10 +491,11 @@ jobs:
           replacesArtifacts: true
           token: "${{ secrets.GITHUB_TOKEN }}"
           bodyFile: "${{ env.release_md }}"
-      
-      - name: Upload build artifacts
+
+      - name: (Upload) to artifacts
+        id: upload-release
+        # if: ${{ 'true' == 'false' }} # disable
         uses: actions/upload-artifact@main
         with:
           name: "${{ env.app_branch }}"
           path: "${{ env.dir_output }}/*.${{ env.target_ext }}"
-      
