--- a/.github/workflows/build-artifacts_dev.yml
+++ b/.github/workflows/build-artifacts_dev.yml
@@ -493,7 +493,7 @@ jobs:
           bodyFile: "${{ env.release_md }}"
 
       - name: (Upload) to artifacts
-        id: upload-release
+        id: upload-artifact
         # if: ${{ 'true' == 'false' }} # disable
         uses: actions/upload-artifact@main
         with:
