--- a/.github/workflows/clean_workspace.yml
+++ b/.github/workflows/clean_workspace.yml
@@ -99,9 +99,10 @@ jobs:
         run: |
           echo -e "Current working directory: $(pwd)"
 
+          # https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2404-Readme.md
           sudo -E apt-get -qq -y update
           installed_packages=$(dpkg-query -W -f='${binary:Package}\n')
-          # https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2404-Readme.md
+          sudo apt-mark showhold
 
           # ===== Re-intall GNU C++ =====
           # ----- regex for uninstall -----
