--- a/.github/workflows/clean_workspace.yml
+++ b/.github/workflows/clean_workspace.yml
@@ -197,12 +197,10 @@ jobs:
             "php*"
           )
           sudo -E apt-get -qq -y update
-          sudo -E apt-get -qq -y purge "${packages_purge[@]}" || true
+          sudo -E apt-get -qq -y purge "${packages_purge[@]}"
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
-          # apt list --installed
-          # dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
 
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
