--- a/.github/workflows/clean_workspace.yml
+++ b/.github/workflows/clean_workspace.yml
@@ -121,11 +121,12 @@ jobs:
             "firefox*"
             "dotnet*"
             "powershell*"
+            # Databases
+            "sqlite*"
+            "postgresql*"
+            "mysql*"
             "mongodb*"
             "moby*"
-            "mysql*"
-            "postgresql*"
-            "sqlite3*"
             "apache2*"
             "nginx*"
             "php*"
@@ -185,6 +186,9 @@ jobs:
           )
           echo "Packages to be installed: ${packages_install[@]}"
           sudo -E apt-get -qq -y install "${packages_install[@]}"
+
+          # ===== Clean Browsers and Drivers =====
+          sudo -E rm -rf /usr/local/share/chromium
 
           # ===== Clean Swap =====
           # 如果环境变量 AGENT_TOOLSDIRECTORY 不为空，则删除该目录及其所有内容
@@ -283,7 +287,7 @@ jobs:
           echo "listing: /usr/local/share/"
           ls -lh /usr/local/share/
           echo "listing: /usr/share/"
-          ls -lh /usr/share/
+          ls -lh /usr/share/java
 
           echo "status=success" >> ${GITHUB_OUTPUT}
 
