--- a/.github/workflows/clean_workspace.yml
+++ b/.github/workflows/clean_workspace.yml
@@ -192,6 +192,7 @@ jobs:
           sudo -E rm -rf /usr/local/share/chromium
           sudo -E rm -rf /usr/local/share/edge_driver
           sudo -E rm -rf /usr/local/share/gecko_driver
+          sudo -E rm -rf /usr/share/java/selenium-server.jar
 
           # ===== Clean PowerShell Tools =====
           sudo -E rm -rf /usr/local/share/powershell
