--- a/.github/workflows/clean_workspace.yml
+++ b/.github/workflows/clean_workspace.yml
@@ -121,6 +121,7 @@ jobs:
             "firefox*"
             "dotnet*"
             "powershell*"
+            "microsoft-edge*"
             # Databases
             "sqlite*"
             "postgresql*"
