--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -60,29 +60,16 @@ jobs:
         run: |
           echo "${{ env.custom_env }}" | tr '${{ env.flag_split }}' '\n' | tee -a $GITHUB_ENV
 
-      - name: Clear environment
-        id: clearinit
+      - name: Clean Snap
+        id: clean-snap
         env:
           DEBIAN_FRONTEND: noninteractive
         working-directory: /
         run: |
           echo -e "Current working directory: $(pwd)"
 
-          docker image list
-          # 删除docker所有镜像
-          # for image in $(docker images -q); do
-          #   docker rmi -f $image
-          # done
-          # 删除所有不再使用的 docker 镜像、容器、网络和数据卷
-          docker image prune -a
-
-          # 如果环境变量 AGENT_TOOLSDIRECTORY 不为空，则删除该目录及其所有内容
-          [[ -n "${AGENT_TOOLSDIRECTORY}" ]] && sudo rm -rf "${AGENT_TOOLSDIRECTORY}"
-          # 删除指定的目录及其所有内容，忽略所有错误信息
-          # sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android 2>/dev/null
-          # 关闭所有交换空间 删除指定的交换文件
-          sudo swapoff -a
-          sudo rm -f /swapfile /mnt/swapfile
+          sudo -E apt-get -qq -y update
+          sudo snap list
 
           # ===== Remove snap =====
           for p in $(snap list | awk '{print $1}'); do
@@ -101,8 +88,31 @@ jobs:
           Pin: release a=*
           Pin-Priority: -10
           EOF'
+          sudo -E systemctl daemon-reload
 
-          # ===== Clean apt =====
+          echo "status=success" >> ${GITHUB_OUTPUT}
+
+      - name: Clean Runner
+        id: clean-runner
+        env:
+          DEBIAN_FRONTEND: noninteractive
+        working-directory: /
+        run: |
+          echo -e "Current working directory: $(pwd)"
+
+          # ===== Clean Docker =====
+          docker image list
+          # for image in $(docker images -q); do
+          #   docker rmi -f $image
+          # done
+          docker image prune -a -f
+
+          # https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2404-Readme.md
+          sudo -E apt-get -qq -y update
+          installed_packages=$(dpkg-query -W -f='${binary:Package}\n')
+          
+          # ===== Clean Apt =====
+          # ----- package for purge -----
           packages_purge=(
             "docker*"
             "ghc*"
@@ -111,24 +121,97 @@ jobs:
             "firefox*"
             "dotnet*"
             "powershell*"
-            "openjdk*"
+            "microsoft-edge*"
+            # Databases
+            "sqlite*"
+            "postgresql*"
+            "mysql*"
             "mongodb*"
             "moby*"
-            "mysql*"
-            "postgresql*"
-            "sqlite3*"
             "apache2*"
             "nginx*"
             "php*"
           )
-          sudo -E apt-get -qq -y update
-          sudo -E apt-get -qq -y purge "${packages_purge[@]}" || true
+          sudo -E apt-get -qq -y autoremove --purge "${packages_purge[@]}"
+
+          # ----- package for re-install -----
+          regexes=(
+            # ----- Language and Runtime -----
+            "clang-[0-9]+.*"
+            "clang-format-[0-9]+.*"
+            "clang-tidy-[0-9]+.*"
+            "gcc-[0-9]+.*"
+            "libgcc-[0-9]+.*"
+            "g++-[0-9]+.*"
+            "cpp-[0-9]+.*"
+            "libstdc++-[0-9]+.*"
+            "gfortran-[0-9]+.*"
+            "libgfortran-[0-9]+.*"
+            # ----- Java -----
+            "temurin-[0-9]+-jdk"
+          )
+          packages_purge=()
+          for regex in "${regexes[@]}"; do
+            for package in $installed_packages; do
+              if [[ $package =~ $regex ]]; then
+                  packages_purge+=("$package")
+              fi
+            done
+          done
+
+          echo "Packages to be purged: ${packages_purge[@]}"
+          set +e
+          for package in "${packages_purge[@]}"; do
+            echo "Attempting to remove $package"
+            sudo -E apt-get -qq -y autoremove --purge $package
+            if [[ $? -ne 0 ]]; then
+              echo "Failed to remove $package"
+            fi
+          done
+          set -e
+
+          packages_install=(
+            # ----- Language and Runtime -----
+            "clang"
+            "clang-format"
+            "clang-tidy"
+            "gcc"
+            "libgcc-13-dev"
+            "g++"
+            "cpp"
+            "libstdc++-13-dev"
+            "gfortran"
+            "libgfortran-13-dev"
+            # ----- Java -----
+            "openjdk-21-jdk"
+          )
+          echo "Packages to be installed: ${packages_install[@]}"
+          sudo -E apt-get -qq -y install "${packages_install[@]}"
+
+          # ===== Clean Browsers and Drivers =====
+          sudo -E rm -rf /usr/local/share/chromedriver-linux64
+          sudo -E rm -rf /usr/local/share/chromium
+          sudo -E rm -rf /usr/local/share/edge_driver
+          sudo -E rm -rf /usr/local/share/gecko_driver
+          sudo -E rm -rf /usr/share/java/selenium-server.jar
+
+          # ===== Clean PowerShell Tools =====
+          sudo -E rm -rf /usr/local/share/powershell
+
+          # ===== Clean Swap =====
+          # 如果环境变量 AGENT_TOOLSDIRECTORY 不为空，则删除该目录及其所有内容
+          [[ -n "${AGENT_TOOLSDIRECTORY}" ]] && sudo rm -rf "${AGENT_TOOLSDIRECTORY}"
+          # 删除指定的目录及其所有内容，忽略所有错误信息
+          # sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android 2>/dev/null
+          # 关闭所有交换空间 删除指定的交换文件
+          sudo swapoff -a
+          sudo rm -f /swapfile /mnt/swapfile
+
+          # ===== reload =====
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
-          apt list --installed
-          dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
-
+          
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
 
@@ -287,6 +370,35 @@ jobs:
           distribution: "temurin"
           java-version: "21"
 
+      - name: Check Installed
+        id: check-installed
+        env:
+          DEBIAN_FRONTEND: noninteractive
+        working-directory: /
+        run: |
+          echo -e "Current working directory: $(pwd)"
+
+          sudo -E apt-get autoremove --purge -y -qq
+          sudo -E apt-get clean -y -qq
+          # sudo -E rm -rf /var/lib/apt/lists/*
+          # sudo -E rm -rf /var/log/*.log
+
+          apt list --installed
+          dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
+
+          # ----- check extra dir -----
+          dir_extra=(
+            "/usr/local/share"
+            "/usr/share/"
+          )
+          for dir in "${dir_extra[@]}"; do
+            echo "listing: ${dir}"
+            du -h --max-depth=1 ${dir}
+            ls -lh ${dir}
+          done
+
+          echo "status=success" >> ${GITHUB_OUTPUT}
+
       - name: Create simulated physical disk
         id: disk
         env:
@@ -397,6 +509,8 @@ jobs:
             --prune \
             --auto-gc \
             -j$(nproc --all)
+
+          repo status
 
           df -Th
           echo "Source code synced"
