--- a/.github/workflows/clean_workspace.yml
+++ b/.github/workflows/clean_workspace.yml
@@ -293,8 +293,9 @@ jobs:
 
           # ----- check extra dir -----
           dir_extra=(
-            "/usr/local/share"
+            "/usr/local/share/"
             "/usr/share/"
+            "/usr/local/lib/android/sdk/"
           )
           for dir in "${dir_extra[@]}"; do
             echo "listing: ${dir}"
@@ -342,7 +343,7 @@ jobs:
           sudo pvcreate "${LOOP_ROOT}"
           # 创建卷组
           sudo vgcreate github "${LOOP_MNT}" "${LOOP_ROOT}"
-          
+
           # 在 github 卷组上创建一个名为 runner 的逻辑卷，使用所有可用空间, 并格式化为XFS文件系统
           sudo lvcreate -n runner -l 100%FREE github
           sudo mkfs.xfs /dev/github/runner
